# cc-switch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  README.md  README_DE.md  README_JA.md  README_ZH.md  README_i18n.md  TAURI_MIGRATION_PLAN.md  latest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.bat  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.node.json  vite.config.mts  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  app_store.rs  auto_launch.rs  claude_desktop_config.rs  claude_mcp.rs  claude_plugin.rs  codex_config.rs  codex_history_migration.rs  commands.rs  config.rs  error.rs  gemini_config.rs  hermes_config.rs  import_export.rs  init_status.rs  lib.rs  lightweight.rs  main.rs  mcp.rs  migration.rs  openclaw_config.rs  opencode_config.rs  panic_hook.rs  prompt_files.rs  provider.rs  settings.rs  speedtest.rs  store.rs  tray.rs  usage_events.rs  usage_script.rs  vscode.rs  vscode_config.rs
src-tauri/src/commands/: auth.rs  balance.rs  codex_oauth.rs  coding_plan.rs  config.rs  copilot.rs  failover.rs  global_proxy.rs  hermes.rs  import_export.rs  mcp.rs  misc.rs  mod.rs  model_fetch.rs  omo.rs  openclaw.rs  plugin.rs  provider.rs  proxy.rs  s3_sync.rs  session_manager.rs  (+6 more)
src-tauri/tests/: deeplink_import.rs  hermes_roundtrip.rs  import_export_sync.rs  mcp_commands.rs  provider_commands.rs  provider_service.rs  skill_sync.rs  support.rs
src-tauri/wix/: per-user-main.wxs
(+548 files in other folders)
